@@ -3,3 +3,6 @@ all:
 
 clean:
 	cp -f Makefile.orig Makefile
+
+uninstall:
+	@echo Error: you must run "./configure" first
